crates/formatter/tests/snapshots/snapshots__migrations__000282_workspace_app_add_open_in.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_apps drop column open_in;

drop type workspace_app_open_in;
