crates/formatter/tests/snapshots/snapshots__migrations__000283_user_status_changes.down.snap
---
source: crates/formatter/tests/snapshots.rs
assertion_line: 30
expression: formatted
---
drop trigger if exists user_status_change_trigger on users;

drop function IF exists record_user_status_change();

drop index if exists idx_user_status_changes_changed_at;
drop index if exists idx_user_deleted_deleted_at;

drop table if exists user_status_changes;
drop table if exists user_deleted;
