crates/formatter/tests/snapshots/snapshots__migrations__000283_user_status_changes.up.snap
---
source: crates/formatter/tests/snapshots.rs
assertion_line: 30
expression: formatted
---
create table user_status_changes (
	id uuid primary key default gen_random_uuid(),
	user_id uuid not null references users (id),
	new_status user_status not null,
	changed_at timestamptz not null default CURRENT_TIMESTAMP
);

comment on table user_status_changes is 'Tracks the history of user status changes';

create index idx_user_status_changes_changed_at
	on user_status_changes (changed_at);

insert into user_status_changes (user_id, new_status, changed_at)
select id, status, created_at
from users
where not deleted;

create table user_deleted (
	id uuid primary key default gen_random_uuid(),
	user_id uuid not null references users (id),
	deleted_at timestamptz not null default CURRENT_TIMESTAMP
);

comment on table user_deleted is 'Tracks when users were deleted';

create index idx_user_deleted_deleted_at on user_deleted (deleted_at);

insert into user_deleted (user_id, deleted_at)
select id, updated_at
from users
where deleted;

create or replace function record_user_status_change()
returns trigger
as $$
	begin
		if TG_OP = 'INSERT' or OLD.status is distinct from NEW.status then
			insert into user_status_changes (user_id, new_status, changed_at)
			values (NEW.id, NEW.status, NEW.updated_at);
		end if;
		if OLD.deleted = false and NEW.deleted = true then
			insert into user_deleted (user_id, deleted_at)
			values (NEW.id, NEW.updated_at);
		end if;
		return NEW;
	end;
$$
language plpgsql;

create trigger user_status_change_trigger
	after insert or update on users
	for each row
	execute function record_user_status_change();
