crates/formatter/tests/snapshots/snapshots__migrations__000286_provisioner_daemon_status.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop type provisioner_daemon_status;
