crates/formatter/tests/snapshots/snapshots__migrations__000286_provisioner_daemon_status.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type provisioner_daemon_status as enum ('offline', 'idle', 'busy');

comment on type provisioner_daemon_status is 'The status of a provisioner daemon.';
