crates/formatter/tests/snapshots/snapshots__migrations__000287_template_read_to_use.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update templates
set
	group_acl = replace(group_acl::text, '["read", "use"]', '["read"]')::jsonb,
	user_acl = replace(user_acl::text, '["read", "use"]', '["read"]')::jsonb
